--- a/components/SpaceAnimation.module.css
+++ b/components/SpaceAnimation.module.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: 0;
+    z-index: 1;
     opacity: 0.6;
 }
 
